syntax = "proto3";
package api;
option go_package = "github.com/ThisJohan/snapp-assignment/api";

service LogisticsService {
  rpc Deliver(DeliverRequest) returns (DeliverResponse) {}
}
  
message DeliverRequest {
  uint32 ShipmentID = 1;
}
  
message DeliverResponse {
}
  