syntax = "proto3";
package api;
option go_package = "github.com/ThisJohan/snapp-assignment/api";

service ShippingService {
}